--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -23,6 +23,6 @@
     这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
   </p>
-  <p><img src="#" /></p>
+  <p><img src="https://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg" /></p>
 </body>
 </html>
