--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -19,10 +19,40 @@
     这是一个很长很长度段落，这是一个很长很长的段落，换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长得段落，这是一个很长很长的段落，这是一个很长很长的段落，
     这是一个很长很长的段落，换行了<br />
-    这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接链接到http://ife.baidu.com</a>
+    这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>
     这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
   </p>
-  <p><img src="https://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg" /></p>
+  <img src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/>
+  <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    <b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到
+    http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。 
+  </p>
+  <h2>另一篇文章一级标题</h2>
+  <h3>文章二级标题</h3>
+  <p>文章作者&nbsp&nbsp文章发表时间</p>
+  <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+  这是一个很长很长的段落，换行了<br />
+  这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+  这是一个很长很长的段落，换行了<br />
+    这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>
+    这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
+  </p>
+  <img src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/>
+  <ul>
+    <li>列表项目一</li>
+    <li>列表项目二</li>
+    <li>列表项目三</li>
+  </ul>
+  <h2>图片</h2>
+   <ul>
+    <li><img src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+
+  </ul>
+  
+  
 </body>
 </html>
