--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -48,9 +48,17 @@
     <li>列表项目三</li>
   </ul>
   <h2>图片</h2>
-   <ul>
-    <li><img src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-
+   <ul type="none">
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img stype="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
   </ul>
   
   
