--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -49,16 +49,16 @@
   </ul>
   <h2>图片</h2>
    <ul type="none">
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
-    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
+    <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
   </ul>
   
   
