--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -61,7 +61,7 @@
     <li>好看的图片<img style="display:block;" src="http://github.com/lkg028/ife-baidu/blob/master/task_1_1_1.jpg?raw=true" height="350px" width="350px"/><br /></li>
   </ul>
   <h2>最后一篇文章一级标题</h2>
-  <h3>文章三级标题</h3>
+  <h3>文章二级标题</h3>
   <p>文章作者&nbsp&nbsp文章发表时间</p>
   <ol>
     <li>排名1</li>
@@ -104,9 +104,26 @@
   <div>
     <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
     <h3>侧栏注册窗口标题</h3>
-    <form>
-    
+    <form method="post" action="#">
+      <label for="email">请输入邮箱地址：</label><input type="email" id="email" /><br />邮箱地址请按要求格式输入<br />
+     请输入密码：<input type="password" />请重复输入密码：<input type="password" /><br />
+     密码为6-16位英文数字<br />
+      性别：<input type="radio" name="gender" id="male" /><label for="male">男</label><input type="radio" name="gender" id="female" /><label for="female">女</label>
+      <label for="city">城市</label>
+      <select id="city">
+        <option>北京</option>
+        <option>上海</option>
+        <option>广州</option>
+        <option>深圳</option>
+      </select>
+      爱好：<input type="checkbox" name="checkbox1" value="运动" />运动
+            <input type="checkbox" name="checkbox2" value="艺术" />艺术
+             <input type="checkbox" name="checkbox3" value="运动" />科学
+      <label for="scrip">个人描述：</label>
+      <textarea cols="20" rows="2">这是一个多行输入框，输入您的个人描述</textarea>
+      <input type="submit" value="确认提交" name="submit"/>
     </form>
   </div>
+  <p>版权所有©</p>
 </body>
 </html>
