--- a/task_1_1_1.html
+++ b/task_1_1_1.html
@@ -108,7 +108,7 @@
       <label for="email">请输入邮箱地址：</label><input type="email" id="email" /><br />邮箱地址请按要求格式输入<br />
      请输入密码：<input type="password" />请重复输入密码：<input type="password" /><br />
      密码为6-16位英文数字<br />
-      性别：<input type="radio" name="gender" id="male" /><label for="male">男</label><input type="radio" name="gender" id="female" /><label for="female">女</label>
+      性别：<input type="radio" name="gender" id="male" checked="checked" /><label for="male">男</label><input type="radio" name="gender" id="female" /><label for="female">女</label>
       <label for="city">城市</label>
       <select id="city">
         <option>北京</option>
