添加一个段落

--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -19,7 +19,7 @@
         </li>
     </ul>
     <h2>这是一个二级标题 </h2>
-    <p>这是一个段落
+    <p>这是一个段落，哈哈哈
         <img src="githu.jpg" alt="这是一个标识">
     </p>
 </body>
