--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <title>task001</title>
 </head>
 
@@ -19,9 +20,10 @@
         </li>
     </ul>
     <h2>这是一个二级标题 </h2>
-    <p>这是一个段落，哈哈哈
-        <img src="githu.jpg" alt="这是一个标识">
+    <p>这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.
     </p>
+    <img src="github.jpg" alt="这是一个标识">
+    
 </body>
 
 </html>
