第七节准备

--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>task001</title>
 </head>
 
@@ -22,8 +22,8 @@
     <h2>这是一个二级标题 </h2>
     <p>这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.
     </p>
-    <img src="github.jpg" alt="这是一个标识">
-    
+    <img src="img/github.jpg" alt="这是一个标识">
+
 </body>
 
 </html>
