--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -10,19 +10,78 @@
 </head>
 
 <body>
-    <h1>lkg028</h1>
-    <ul>
-        <li>
-            <a href="#">任务一链接</a>
-        </li>
-        <li>
-            <a href="#">我的微博</a>
-        </li>
-    </ul>
-    <h2>这是一个二级标题 </h2>
-    <p>这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.这是一个段落，这是一个段落.
-    </p>
-    <img src="img/github.jpg" alt="这是一个标识">
+    <header>
+        <nav>
+            <h1>YourLOGO</h1>
+            <ul>
+                <li>
+                    <a href="#">首页</a>
+                </li>
+                <li>
+                    <a href="#">文章</a>
+                </li>
+                <li>
+                    <a href="#">作品</a>
+                </li>
+                <li>
+                    <a href="#">关于</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="#">
+            <img src="img/icon-github.png" alt="github-logo">
+        </a>
+    </header>
+    <main>
+        <section id="banner">
+            <div>
+                <div class="content">
+                    <h2>标题1</h2>
+                    <p>这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。</p>
+                </div>
+            </div>
+        </section>
+        <section class="figure-text">
+            <div>
+                <img src="img/fengjing1.jpg" alt="">
+                <P>
+                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+                </P>
+            </div>
+            <div>
+                <img src="img/fengjing2.jpg" alt="">
+                <P>
+                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+                </P>
+            </div>
+            <div>
+                <img src="img/fengjing3.jpg" alt="">
+                <P>
+                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+                </P>
+            </div>
+        </section>
+        <section>
+            <div class="user-avatar">
+                <img src="hewenhui.jpg" alt="">
+            </div>
+            <h2>Hi, I'm Hewenhui</h2>
+            <p>
+                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+            </p>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li>主页</li>
+            <li>文章</li>
+            <li>作品</li>
+            <li>关于</li>
+        </ul>
+    </footer>
 
 </body>
 
