完成第一个页面

--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -57,30 +57,85 @@
             <div>
                 <img src="img/fengjing3.jpg" alt="">
                 <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。 这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
                 </P>
             </div>
         </section>
-        <section>
+        <section class="user">
             <div class="user-avatar">
-                <img src="hewenhui.jpg" alt="">
+                <img src="img/hewenhui.jpg" alt="">
             </div>
             <h2>Hi, I'm Hewenhui</h2>
             <p>
-                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
-                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
-                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
             </p>
         </section>
     </main>
     <footer>
-        <ul>
+        <ul class="nav">
             <li>主页</li>
             <li>文章</li>
             <li>作品</li>
             <li>关于</li>
         </ul>
+        <div class="container">
+            <div>
+                <h3>学习资料</h3>
+                <ul>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                </ul>
+            </div>
+            <div>
+                <h3>学习资料</h3>
+                <ul>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                </ul>
+            </div>
+            <div>
+                <h3>学习资料</h3>
+                <ul>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                </ul>
+            </div>
+            <div>
+                <h3>学习资料</h3>
+                <ul>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                </ul>
+            </div>
+            <div>
+                <h3>学习资料</h3>
+                <ul>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                    <li>LINK</li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>版权信息</p>
+            <img src="img/icon-github.png" alt="">
+        </div>
     </footer>
 
 </body>
