--- a/2015spring/task001-reset/index.html
+++ b/2015spring/task001-reset/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1>YourLOGO</h1>
+            <h1>I'm Hewenhui</h1>
             <ul>
                 <li>
                     <a href="#">首页</a>
