--- a/2015spring/task001-reset/index.html
+++ b/2015spring/task001-reset/index.html
@@ -32,45 +32,46 @@
             <img src="img/icon-github.png" alt="github-logo">
         </a>
     </header>
-    <main>
-        <section id="banner">
-            <div>
-                <div class="content">
-                    <h2>标题1</h2>
-                    <p>这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。</p>
-                </div>
+    <section id="banner">
+        <div class="banner-img">
+            <img src="img/banner-bg.jpg" alt="">
+        </div>
+        <div class="container">
+            <div class="content">
+                <h2>标题1</h2>
+                <p>这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。</p>
             </div>
-        </section>
-        <section class="figure-text">
-            <div>
-                <img src="img/fengjing1.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-            <div>
-                <img src="img/fengjing2.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-            <div>
-                <img src="img/fengjing3.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。 这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-        </section>
-        <section class="user">
-            <div class="user-avatar">
-                <img src="img/hewenhui.jpg" alt="">
-            </div>
-            <h2>Hi, I'm Hewenhui</h2>
-            <p>
-                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
-            </p>
-        </section>
-    </main>
+        </div>
+    </section>
+    <section class="figure-text">
+        <div>
+            <img src="img/fengjing1.jpg" alt="">
+            <P>
+                这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+            </P>
+        </div>
+        <div>
+            <img src="img/fengjing2.jpg" alt="">
+            <P>
+                这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+            </P>
+        </div>
+        <div>
+            <img src="img/fengjing3.jpg" alt="">
+            <P>
+                这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。 这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
+            </P>
+        </div>
+    </section>
+    <section class="user">
+        <div class="user-avatar">
+            <img src="img/hewenhui.jpg" alt="">
+        </div>
+        <h2>Hi, I'm Hewenhui</h2>
+        <p>
+            这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+        </p>
+    </section>
     <footer>
         <ul class="nav">
             <li>主页</li>
@@ -78,7 +79,7 @@
             <li>作品</li>
             <li>关于</li>
         </ul>
-        <div class="container">
+        <div class="container link">
             <div>
                 <h3>学习资料</h3>
                 <ul>
@@ -137,7 +138,6 @@
             <img src="img/icon-github.png" alt="">
         </div>
     </footer>
-
 </body>
 
 </html>
