--- a/2015spring/task001/index.html
+++ b/2015spring/task001/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>task001-index</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <h1>YourLOGO</h1>
+        <nav class="container">
+            <h1>I'M HeWenhui</h1>
             <ul>
                 <li>
                     <a href="#">首页</a>
@@ -29,115 +30,111 @@
             </ul>
         </nav>
         <a href="#">
-            <img src="img/icon-github.png" alt="github-logo">
+            <img src="img/icon-github.png" alt="">
         </a>
     </header>
-    <main>
-        <section id="banner">
-            <div>
-                <div class="content">
-                    <h2>标题1</h2>
-                    <p>这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。这是正文，这是正文。</p>
-                </div>
-            </div>
-        </section>
-        <section class="figure-text">
-            <div>
-                <img src="img/fengjing1.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-            <div>
-                <img src="img/fengjing2.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-            <div>
-                <img src="img/fengjing3.jpg" alt="">
-                <P>
-                    这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。 这是描述图片的文字，这是描述图片的文字。这是描述图片的文字，这是描述图片的文字。
-                </P>
-            </div>
-        </section>
-        <section class="user">
-            <div class="user-avatar">
-                <img src="img/hewenhui.jpg" alt="">
-            </div>
-            <h2>Hi, I'm Hewenhui</h2>
-            <p>
-                这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。 这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。这是一个很长很长的自我介绍，这是一个很长很长的自我介绍。
+    <section class="banner">
+        <div class="banner-img">
+            <img src="img/banner-bg.jpg" alt="">
+        </div>
+        <div class="banner-content">
+            <h2>标题一</h2>
+            <p>这是正文这是正文，这是正文这是正文。这是正文这是正文，这是正文这是正文。这是正文这是正文，这是正文这是正文。 这是正文这是正文，这是正文这是正文。这是正文这是正文，这是正文这是正文。这是正文这是正文，这是正文这是正文。
             </p>
-        </section>
-    </main>
+        </div>
+    </section>
+    <section class="figure-text container">
+        <div>
+            <img src="img/fengjing1.jpg" alt="">
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+        </div>
+        <div>
+            <img src="img/fengjing2.jpg" alt="">
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+        </div>
+        <div>
+            <img src="img/fengjing3.jpg" alt="">
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+            <p>这里是正文，这里是正文。这里是正文，这里是正文。这里是正文，这里是正文。</p>
+        </div>
+    </section>
+    <section class="user">
+        <div class="user-avatar">
+            <img src="img/hewenhui.jpg" alt="">
+        </div>
+        <h2>Hi, I'm HeWenhui</h2>
+        <p>
+            这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。
+            这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。
+            这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。这是一段很长很长的介绍。
+        </p>
+    </section>
     <footer>
         <ul class="nav">
-            <li>主页</li>
-            <li>文章</li>
-            <li>作品</li>
-            <li>关于</li>
+            <li>
+                <a href="#">主页</a>
+            </li>
+            <li>
+                <a href="#">文章</a>
+            </li>
+            <li>
+                <a href="#">作品</a>
+            </li>
+            <li>
+                <a href="#">关于</a>
+            </li>
         </ul>
-        <div class="container">
-            <div>
-                <h3>学习资料</h3>
-                <ul>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                </ul>
-            </div>
-            <div>
-                <h3>学习资料</h3>
-                <ul>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                </ul>
-            </div>
-            <div>
-                <h3>学习资料</h3>
-                <ul>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                </ul>
-            </div>
-            <div>
-                <h3>学习资料</h3>
-                <ul>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                </ul>
-            </div>
-            <div>
-                <h3>学习资料</h3>
-                <ul>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                    <li>LINK</li>
-                </ul>
-            </div>
+        <div class="container link">
+            <dl>
+                <dt>学习资料</dt>
+                <dd>LINK</dd>
+                <dd>Hover样式</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+            </dl>
+            <dl>
+                <dt>学习资料</dt>
+                <dd>LINK</dd>
+                <dd>Hover样式</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+            </dl>
+            <dl>
+                <dt>学习资料</dt>
+                <dd>LINK</dd>
+                <dd>Hover样式</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+            </dl>
+            <dl>
+                <dt>学习资料</dt>
+                <dd>LINK</dd>
+                <dd>Hover样式</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+            </dl>
+            <dl>
+                <dt>学习资料</dt>
+                <dd>LINK</dd>
+                <dd>Hover样式</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+                <dd>LINK</dd>
+            </dl>
         </div>
         <div class="copyright">
-            <p>版权信息</p>
-            <img src="img/icon-github.png" alt="">
+            <P>版权信息</P>
+            <a href="#">
+                <img src="img/icon-github.png" alt="Hewenhui github">
+            </a>
         </div>
     </footer>
-
 </body>
 
 </html>
