--- a/2015spring/task001/gallery.html
+++ b/2015spring/task001/gallery.html
@@ -90,13 +90,13 @@
                             </div>
                         </figure>
                         <figure>
-                                <img src="img/gallery1.jpg" alt="">
-                                <div class="tag">J</div>
-                                <div class="text">
-                                    <h2>这是标题</h2>
-                                    <p>这是内容，这是内容。</p>
-                                </div>
-                            </figure>
+                            <img src="img/gallery1.jpg" alt="">
+                            <div class="tag">J</div>
+                            <div class="text">
+                                <h2>这是标题</h2>
+                                <p>这是内容，这是内容。</p>
+                            </div>
+                        </figure>
                     </div>
                 </div>
                 <div id="figure-right" class="col-2">
@@ -146,7 +146,46 @@
                     <input type="submit" value="GO">
                 </form>
             </div>
-            <div id="rank"></div>
+            <div id="rank">
+                <h3>人气排行榜</h3>
+                <ol>
+                    <li>
+                        <span class="li-type">1</span>
+                        <span>
+                            <span id="bar" style="width: 100%;"></span>
+                        </span>
+                        <span>ui.tree</span>
+                    </li>
+                    <li>
+                        <span class="li-type">2</span>
+                        <span>
+                            <span id="bar" style="width: 80%;"></span>
+                        </span>
+                        <span>util.trim</span>
+                    </li>
+                    <li>
+                        <span class="li-type">3</span>
+                        <span>
+                            <span id="bar" style="width: 60%;"></span>
+                        </span>
+                        <span>app.todo</span>
+                    </li>
+                    <li>
+                        <span class="li-type">4</span>
+                        <span>
+                            <span id="bar" style="width: 30%;"></span>
+                        </span>
+                        <span>ui.tab</span>
+                    </li>
+                    <li>
+                        <span class="li-type">5</span>
+                        <span>
+                            <span id="bar" style="width: 20%;"></span>
+                        </span>
+                        <span>util.addClass</span>
+                    </li>
+                </ol>
+            </div>
         </aside>
         <div class="clear-fix"></div>
     </div>
