--- a/2015spring/task001/about.html
+++ b/2015spring/task001/about.html
@@ -33,9 +33,63 @@
             <img src="img/icon-github.png" alt="">
         </a>
     </header>
-    <section>
+    <main class="container">
+        <div class="content">
+            <div id="basic">
+                <h2>NAME</h2>
+                <p class="descript">这是一段自我介绍，这是一段自我介绍。这是一段自我介绍，这是一段自我介绍。
+                        这是一段自我介绍，这是一段自我介绍。这是一段自我介绍，这是一段自我介绍。
+                        这是一段自我介绍，这是一段自我介绍。这是一段自我介绍，这是一段自我介绍。
+                        这是一段自我介绍，这是一段自我介绍。这是一段自我介绍，这是一段自我介绍。
+                        这是一段自我介绍，这是一段自我介绍。这是一段自我介绍，这是一段自我介绍。
+                </p>
+                <div class="avatar icon">
+                    <img src="img/hewenhui.jpg" alt="">
+                </div>
+            </div>
+            <div id="contact">
+                <h2>联系方式</h2>
+                <ul class="descript">
+                    <li>微信：lkg028</li>
+                    <li>手机号码：13038585198</li>
+                    <li>邮箱：lkg028@outlook.com</li>
+                </ul>
+                <div class="icon">
+                    <img src="img/hewenhui.jpg" alt="">
+                </div>
+            </div>
+            <div id="edu">
+                <h2>教育经历</h2>
+                <dl class="descript">
+                    <dt>2008</dt>
+                    <dd>某某某中学</dd>
+                    <dt>2010</dt>
+                    <dd>某某某高中</dd>
+                    <dt>2010</dt>
+                    <dd>某某某大学  XXXX专业 XXXX方向</dd>
+                </dl>
+                <div class="icon">
+                    <img src="img/hewenhui.jpg" alt="">
+                </div>
+            </div>
+            <div id="word">
+                <h2>工作经历</h2>
+                <dl class="descript">
+                        <dt>2008</dt>
+                        <dd>某某某中学</dd>
+                        <dt>2010</dt>
+                        <dd>某某某高中</dd>
+                        <dt>2010</dt>
+                        <dd>某某某大学  XXXX专业 XXXX方向</dd>
+                </dl>
+                <div class="icon">
+                    <img src="img/hewenhui.jpg" alt="">
+                </div>
+            </div>
 
-    </section>
+        </div>
+        <div class="clear-fix"></div>
+    </main>
     <footer>
         <ul class="nav">
             <li>
